[tool.poetry]
name = "gptprompthelp"
version = "0.1.0"
description = ""
authors = ["Kevin Pan <kevinrpan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.24.0"
langchain = "^0.0.221"
python-dotenv = "^1.0.0"
guidance = "^0.0.64"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
